# subo3_pkgs

./: CMakeLists (original).txt  CMakeLists.txt  SUBO3.files  SUBO3.includes  package.xml
MATLAB/: CTC_Torque_TEST.m  Euler_Angle.m  FT_Sensor_apply_force.m  GROUND_CTC_TEST.m  Jacobian.m  Sampling_time_2khz.m  test.asv  test.m  tmpdata.txt  tmpdata0.txt  tmpdata1.txt  tmpdata10.txt  tmpdata11.txt  tmpdata2.txt  tmpdata3.txt  tmpdata4.txt  tmpdata5.txt  tmpdata6.txt  tmpdata7.txt  tmpdata8.txt  tmpdata9.txt
MATLAB/210115_CTC_Control/: CTC_Torque_TEST.m  L_Des_X.txt  L_Foot_Pos.txt
MATLAB/210119_CTC_Gain_Test/: CTC_Torque_Gain_TEST.m  CTC_Torque_Gain_TEST_ONGROUND.m  L_torque_CTC.txt
MATLAB/210120_Mode_Change_Test/: Mode_Change_Torque_Fade_0.txt  Mode_Change_Torque_Fade_2.txt  Mode_Change_Torque_Fade_3.txt
MATLAB/210122_Sampling_time_test/: L_Des_X.txt  L_Foot_Pos_2.txt  Sampling_time_1khz.m
MATLAB/210125_CTC_contineous_cont_sampling_time_test/: L_Des_X_1.txt  L_Des_X_2.txt  L_Des_X_5.txt  L_Foot_Pos_1.txt  L_Foot_Pos_2.txt  L_Foot_Pos_5.txt  L_torque_1.txt  L_torque_2.txt  L_torque_5.txt  R_Des_X_1.txt  R_Des_X_2.txt  R_Des_X_5.txt  R_Foot_Pos_1.txt  R_Foot_Pos_2.txt  R_Foot_Pos_5.txt  R_torque_1.txt  R_torque_2.txt  R_torque_5.txt  sampling_time_test.m
MATLAB/210126_CTC_ground_sampling_time_test/: L_Des_X_1.txt  L_Des_X_2.txt  L_Des_X_5.txt  L_Des_X_5_Gain.txt  L_Foot_Pos_1.txt  L_Foot_Pos_2.txt  L_Foot_Pos_5.txt  L_Foot_Pos_5_Gain.txt  L_torque_1.txt  L_torque_2.txt  L_torque_5.txt  L_torque_5_Gain.txt  joint_torque_1.txt  joint_torque_2.txt  joint_torque_5.txt  joint_torque_5_Gain.txt  sampling_time_test.m
MATLAB/210204_Compare_CTC/: A_Des_X.txt  A_Foot_Pos.txt  A_torque.txt  GROUND_CTC_TEST.m  G_Des_X.txt  G_Foot_Pos.txt  G_torque.txt
MATLAB/210204_GROUND_CTC_TEST/: GROUND_CTC_TEST.m  tmpdata3.txt
MATLAB/210208_sampling_time_test/: GROUND_CTC_TEST.m  torque1.txt  torque2.txt  torque5.txt
MATLAB/210215_test/: Des_X_A.txt  Des_X_G.txt  Foot_Pos_A.txt  Foot_Pos_G.txt  Foot_Pos_dot_A.txt  Foot_Pos_dot_G.txt  NE_Tau_A.txt  NE_Tau_G.txt  X_CTC_A.txt  X_CTC_G.txt  joint_torque_A.txt  joint_torque_G.txt  out_joint_torque_A.txt  out_joint_torque_G.txt  q_CTC_A.txt  q_CTC_G.txt  test.m  tmp_A.txt  tmp_G.txt  torque_CTC_A.txt  torque_CTC_G.txt
MATLAB/210215_test2/: A_Jacobian_dot_A.txt  A_Jacobian_dot_G.txt  Des_X_A.txt  Des_X_G.txt  Foot_Pos_A.txt  Foot_Pos_G.txt  Foot_Pos_dot_A.txt  Foot_Pos_dot_G.txt  NE_Tau_A.txt  NE_Tau_G.txt  QDot_A.txt  QDot_G.txt  Q_A.txt  Q_G.txt  X_CTC_A.txt  X_CTC_G.txt  joint_torque_A.txt  joint_torque_G.txt  out_joint_torque_A.txt  out_joint_torque_G.txt  q_CTC_A.txt  q_CTC_G.txt  test.m  tmp_A.txt  tmp_G.txt  torque_CTC_A.txt  torque_CTC_G.txt
MATLAB/210215_test3/: A_Jacobian_A.txt  A_Jacobian_G.txt  A_Jacobian_dot_A.txt  A_Jacobian_dot_G.txt  Bmatrix_A.txt  Bmatrix_G.txt  Foot_Pos_A.txt  Foot_Pos_G.txt  Foot_Pos_dot_A.txt  Foot_Pos_dot_G.txt  Inv_A_Jacobian.txt  Inv_A_Jacobian_A.txt  Jacobian_A.txt  Jacobian_G.txt  Jacobian_tmp_A.txt  Jacobian_tmp_G.txt  test.asv  test.m  torque_CTC_A.txt  torque_CTC_G.txt
MATLAB/210226_falling_test/: falling.m  tmpdata0.txt  tmpdata1.txt  tmpdata2.txt  tmpdata3.txt  tmpdata4.txt  tmpdata5.txt
MATLAB/210302_Foot_Force_test/: force.m  tmpdata0.txt  tmpdata1.txt
MATLAB/210302_Quaternion_test/: quat.m  tmpdata0.txt  tmpdata1.txt  tmpdata2.txt  tmpdata3.txt
MATLAB/210304_zmp_test/: tmpdata0.txt  tmpdata1.txt  tmpdata2.txt  tmpdata3.txt  tmpdata4.txt  tmpdata5.txt  tmpdata6.txt  tmpdata7.txt  zmp_test.m
MATLAB/210309_change_footpad/: tmpdata0.txt  tmpdata1.txt  tmpdata2.txt  tmpdata3.txt  tmpdata4.txt  (+4 more)
launch/: subo3.launch
msg/: CTCMsg.msg
src/: GdDataPlot.m  Inv_mat12.cpp  nrutil.cpp  nrutil.h  plugin.cc  plugin20200805.cc  stdafx.cpp
worlds/: subo3.world
(+669 files in other folders)
